# src/api/example.js
@@ -1,10 +1,0 @@
-import express from 'express';
-const router = express.Router();
-
-router.get('/', (req, res) => {
-  res.status(200).json({
-    data: 'not authenticated'
-  });
-});
-
-export default router;
