# src/app.js
@@ -4,11 +4,8 @@ import { errorLogger, logger as requestLogger } from 'express-winston';
 import path from 'path';
 import swaggerUi from 'swagger-ui-express';
 import error from './api/error';
-import example from './api/example';
-import authenticatedExample from './api/example-authenticated';
 import health from './api/health';
 import { options } from './config/logging';
-import { authenticateRequest } from './middleware/auth';
 import swaggerDocument from './swagger.json';
 
 // Express app
@@ -20,8 +17,6 @@ app.get('/', (req, res) => {
 });
 app.use('/error', error);
 app.use('/health', health);
-app.use('/example', example);
-app.use('/example-authenticated', authenticateRequest, authenticatedExample);
 app.use('/swagger', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 // Loggers and context
